docs(style): fix z-index overlap

--- a/docs/assets/css/demo-block.css
+++ b/docs/assets/css/demo-block.css
@@ -55,7 +55,6 @@
 
 .vue-demo-tools {
   position: relative;
-  z-index: 999;
 }
 
 .vue-demo-tools > input[type="checkbox"] {
